[gd_scene load_steps=8 format=4 uid="uid://ntd8qb6u8ojg"]

[ext_resource type="Script" uid="uid://b2d0lenxcqj5q" path="res://splitscreen.gd" id="1_0e48y"]
[ext_resource type="PackedScene" uid="uid://dcnjxsja6tscx" path="res://player_character.tscn" id="1_wtcfe"]
[ext_resource type="Script" uid="uid://cun86is17hxnh" path="res://world.gd" id="2_kdubu"]
[ext_resource type="Texture2D" uid="uid://cpffafyu76ykr" path="res://images/character/FireElemental.png" id="3_0hol4"]
[ext_resource type="Texture2D" uid="uid://b5avdbcn65w1f" path="res://images/character/WaterElemental.png" id="4_q6r6c"]
[ext_resource type="TileSet" uid="uid://cl6ryckw4voti" path="res://tile_set.tres" id="5_q6r6c"]
[ext_resource type="TileSet" uid="uid://hi2cisq3545w" path="res://interactibles_tile_set.tres" id="7_d21ai"]

[node name="Node2D" type="Node2D"]
texture_filter = 1
script = ExtResource("1_0e48y")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FireViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
offset_right = 512.0
offset_bottom = 512.0

[node name="FireViewport" type="SubViewport" parent="CanvasLayer/FireViewportContainer"]
disable_3d = true
handle_input_locally = false
size = Vector2i(576, 648)
render_target_update_mode = 4

[node name="FireCamera" type="Camera2D" parent="CanvasLayer/FireViewportContainer/FireViewport"]
zoom = Vector2(5, 5)
limit_left = 0
limit_top = 0
limit_right = 512
limit_bottom = 512

[node name="World" type="Node2D" parent="CanvasLayer/FireViewportContainer/FireViewport"]
y_sort_enabled = true
script = ExtResource("2_kdubu")

[node name="FireCharacter" parent="CanvasLayer/FireViewportContainer/FireViewport/World" node_paths=PackedStringArray("camera") instance=ExtResource("1_wtcfe")]
position = Vector2(56, 93)
character = "fire"
camera = NodePath("../../FireCamera")
spritesheet = ExtResource("3_0hol4")

[node name="WaterCharacter" parent="CanvasLayer/FireViewportContainer/FireViewport/World" node_paths=PackedStringArray("camera") instance=ExtResource("1_wtcfe")]
position = Vector2(88, 93)
character = "water"
camera = NodePath("../../../../WaterViewportContainer/WaterViewport/WaterCamera")
spritesheet = ExtResource("4_q6r6c")

[node name="BaseLayer" type="TileMapLayer" parent="CanvasLayer/FireViewportContainer/FireViewport/World"]
texture_filter = 1
tile_map_data = PackedByteArray("AAAAAAAAAAABAAIAAAABAAAAAAABAAIAAAABAAEAAAABAAIAAAAAAAEAAAABAAIAAAACAAEAAAABAAIAAAADAAEAAAABAAIAAAACAAAAAAABAAIAAAABAAIAAAABAAIAAAAAAAIAAAABAAIAAAABAAMAAAABAAIAAAACAAMAAAABAAIAAAACAAIAAAABAAIAAAADAAIAAAABAAIAAAAAAAMAAAABAAIAAAAAAAQAAAABAAIAAAABAAQAAAABAAIAAAACAAQAAAABAAIAAAABAAUAAAABAAIAAAADAAAAAAABAAIAAAADAAMAAAABAAIAAAAEAAQAAAABAAIAAAAFAAQAAAABAAIAAAAGAAQAAAABAAIAAAAHAAQAAAABAAIAAAAFAAMAAAABAAIAAAAEAAIAAAABAAIAAAAEAAEAAAABAAIAAAAEAAAAAAABAAIAAAAFAAAAAAABAAIAAAAFAAEAAAABAAIAAAACAAUAAAABAAIAAAADAAUAAAABAAIAAAAEAAUAAAABAAIAAAAFAAUAAAABAAIAAAAHAAMAAAABAAIAAAAGAAMAAAABAAIAAAAEAAMAAAABAAIAAAADAAQAAAABAAIAAAACAAYAAAABAAIAAAAAAAUAAAABAAIAAAAAAAYAAAABAAIAAAABAAYAAAABAAIAAAADAAYAAAABAAIAAAABAAcAAAABAAIAAAACAAcAAAABAAIAAAAAAAcAAAABAAIAAAAEAAYAAAABAAIAAAAFAAYAAAABAAIAAAADAAcAAAABAAIAAAAEAAcAAAABAAIAAAAFAAcAAAABAAIAAAAFAAIAAAABAAIAAAAGAAIAAAABAAIAAAAGAAEAAAABAAIAAAAGAAAAAAABAAIAAAAHAAEAAAABAAIAAAAHAAAAAAABAAIAAAAHAAIAAAABAAIAAAAGAAgAAAACAAMAAAAHAAcAAAACAAMAAAAIAAAAAAACAAIAAAAIAAEAAAACAAIAAAAIAAIAAAACAAIAAAAIAAMAAAACAAIAAAAIAAQAAAACAAIAAAAFAAgAAAABAAMAAAAEAAgAAAABAAMAAAADAAgAAAABAAMAAAACAAgAAAABAAMAAAABAAgAAAABAAMAAAAAAAgAAAABAAMAAAAHAAYAAAAFAAMAAAAAAAkAAAAAAAAAAAABAAkAAAAAAAAAAAACAAkAAAAAAAAAAAADAAkAAAAAAAAAAAAEAAkAAAAAAAAAAAAFAAkAAAAAAAAAAAAGAAkAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAACAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAoAAAAAAAAAAAAJAAoAAAAAAAAAAAAIAAoAAAAAAAAAAAAHAAoAAAAAAAAAAAAGAAoAAAAAAAAAAAAFAAoAAAAAAAAAAAAEAAoAAAACAAAAAAADAAoAAAAAAAAAAAACAAoAAAAAAAAAAAACAAsAAAAAAAAAAAABAAsAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAoAAAACAAAAAAABAAoAAAAAAAAAAAADAAsAAAABAAAAAAAEAAsAAAAAAAAAAAAFAAsAAAAAAAAAAAAAAAwAAAAHAAMAAAABAAwAAAAHAAMAAAACAAwAAAAHAAMAAAADAAwAAAAHAAMAAAAEAAwAAAAHAAMAAAACAA0AAAACAAAAAAABAA0AAAAAAAAAAAAAAA0AAAABAAAAAAADAA0AAAAAAAAAAAAEAA0AAAAAAAAAAAAFAA0AAAAAAAAAAAAGAA0AAAAAAAAAAAAHAA0AAAAAAAAAAAAIAA0AAAAAAAAAAAAJAA0AAAAAAAAAAAAKAA0AAAAAAAAAAAALAA0AAAAAAAAAAAAMAA0AAAAAAAAAAAALAAwAAAAAAAAAAAALAAsAAAAHAAMAAAALAAoAAAAAAAAAAAALAAkAAAABAAAAAAAMAAsAAAAHAAMAAAAMAAwAAAACAAAAAAAMAAoAAAAHAAMAAAAMAAkAAAAHAAMAAAAMAAgAAAAHAAMAAAAMAAcAAAAHAAMAAAAMAAYAAAAHAAMAAAALAAYAAAAAAAAAAAALAAUAAAAAAAAAAAAMAAQAAAAHAAMAAAAMAAMAAAAHAAMAAAAMAAIAAAAHAAMAAAAMAAEAAAAHAAMAAAAMAAAAAAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAABAAAAAAALAAQAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAAMAAUAAAAHAAMAAAAJAAsAAAAHAAMAAAAIAAsAAAAHAAMAAAAHAAwAAAAAAAAAAAAIAAwAAAACAAAAAAAHAAsAAAAHAAMAAAAGAAsAAAAHAAMAAAAFAAwAAAAHAAMAAAAGAAwAAAAHAAMAAAAJAAwAAAAAAAAAAAAKAAwAAAAAAAAAAAAKAAsAAAAHAAMAAAANAA0AAAAAAAAAAAANAAwAAAAAAAAAAAANAAsAAAAAAAAAAAANAAkAAAAAAAAAAAANAAoAAAAAAAAAAAANAAgAAAAAAAAAAAANAAcAAAAAAAAAAAANAAYAAAAAAAAAAAANAAUAAAAAAAAAAAANAAQAAAAAAAAAAAANAAMAAAAAAAAAAAANAAIAAAAAAAAAAAANAAEAAAAAAAAAAAANAAAAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAIAAYAAAACAAMAAAAIAAcAAAAAAAAAAAAJAAcAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAYAAAAAAAAAAAAIAAUAAAACAAIAAAAHAAUAAAABAAIAAAAGAAUAAAABAAIAAAAGAAYAAAABAAIAAAAGAAcAAAAFAAMAAAAAAA4AAAAAAAAAAAAAAA8AAAAAAAAAAAAAABAAAAAAAAAAAAAAABEAAAAAAAAAAAAAABIAAAAAAAAAAAAAABUAAAAAAAAAAAAAABQAAAAAAAAAAAAAABMAAAAAAAAAAAAAAB8AAAAAAAAAAAAAAB4AAAAAAAAAAAAAAB0AAAAAAAAAAAAAABwAAAAAAAAAAAAAABsAAAAAAAAAAAAAABoAAAAAAAAAAAAAABkAAAAAAAAAAAAAABgAAAAAAAAAAAAAABcAAAAAAAAAAAAAABYAAAAAAAAAAAAfAB8AAAAAAAAAAAAeAB8AAAAAAAAAAAAdAB8AAAAAAAAAAAAcAB8AAAAAAAAAAAAbAB8AAAAAAAAAAAAaAB8AAAAAAAAAAAAZAB8AAAAAAAAAAAAYAB8AAAAAAAAAAAAXAB8AAAAAAAAAAAAWAB8AAAAAAAAAAAAVAB8AAAAAAAAAAAAUAB8AAAAAAAAAAAATAB8AAAAAAAAAAAASAB8AAAAAAAAAAAARAB8AAAAAAAAAAAAQAB8AAAAAAAAAAAAPAB8AAAAAAAAAAAAOAB8AAAAAAAAAAAANAB8AAAAAAAAAAAAMAB8AAAAAAAAAAAALAB8AAAAAAAAAAAAKAB8AAAAAAAAAAAAJAB8AAAAAAAAAAAAIAB8AAAAAAAAAAAAHAB8AAAAAAAAAAAAGAB8AAAAAAAAAAAAFAB8AAAAAAAAAAAAEAB8AAAAAAAAAAAADAB8AAAAAAAAAAAACAB8AAAAAAAAAAAABAB8AAAAAAAAAAAAOAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAARAAAAAAAAAAAAAAASAAAAAAAAAAAAAAATAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAVAAAAAAAAAAAAAAAWAAAAAAAAAAAAAAAXAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAZAAAAAAAAAAAAAAAaAAAAAAAAAAAAAAAbAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAdAAAAAAAAAAAAAAAeAAAAAAAAAAAAAAAfAB0AAAAAAAAAAAAfABwAAAAAAAAAAAAfABsAAAAAAAAAAAAfABoAAAAAAAAAAAAfAB4AAAAAAAAAAAAfABgAAAAAAAAAAAAfABcAAAAAAAAAAAAfABYAAAAAAAAAAAAfABkAAAAAAAAAAAAfABUAAAAAAAAAAAAfABQAAAAAAAAAAAAfABMAAAAAAAAAAAAfABIAAAAAAAAAAAAfABEAAAAAAAAAAAAfABAAAAAAAAAAAAAfAA8AAAAAAAAAAAAfAA4AAAAAAAAAAAAfAA0AAAAAAAAAAAAfAAwAAAAAAAAAAAAfAAsAAAAAAAAAAAAfAAoAAAAAAAAAAAAfAAkAAAAAAAAAAAAfAAgAAAAAAAAAAAAfAAcAAAAAAAAAAAAfAAYAAAAAAAAAAAAfAAUAAAAAAAAAAAAfAAQAAAAAAAAAAAAfAAMAAAAAAAAAAAAfAAIAAAAAAAAAAAAfAAEAAAAAAAAAAAAfAAAAAAAAAAAAAAAGABcAAAAAAAAAAAAGABYAAAAAAAAAAAAGABUAAAAAAAAAAAAGABQAAAAAAAAAAAAGABMAAAAAAAAAAAAGABIAAAAAAAAAAAAGABEAAAAAAAAAAAAGABAAAAAAAAAAAAAGAA8AAAAAAAAAAAAGAA4AAAAAAAAAAAAFAA4AAAAAAAAAAAAEAA4AAAAAAAAAAAADAA4AAAAAAAAAAAACAA4AAAAAAAAAAAABAA4AAAAAAAAAAAABAA8AAAAAAAAAAAABABAAAAAAAAAAAAABABEAAAAAAAAAAAABABIAAAAAAAAAAAABABMAAAAAAAAAAAABABQAAAAAAAAAAAABABUAAAAAAAAAAAABABYAAAAAAAAAAAABABcAAAAAAAAAAAABABgAAAAAAAAAAAABABkAAAAAAAAAAAABABoAAAAAAAAAAAABABsAAAAAAAAAAAABABwAAAAAAAAAAAABAB0AAAAAAAAAAAABAB4AAAAAAAAAAAACAB4AAAAAAAAAAAACAB0AAAAAAAAAAAACABwAAAAAAAAAAAACABsAAAAAAAAAAAACABoAAAAAAAAAAAACABkAAAAAAAAAAAACABgAAAAAAAAAAAACABcAAAAAAAAAAAACABYAAAAAAAAAAAACABUAAAAAAAAAAAACABQAAAAAAAAAAAACABMAAAAAAAAAAAACABIAAAAAAAAAAAACABEAAAAAAAAAAAACABAAAAAAAAAAAAACAA8AAAAAAAAAAAADAA8AAAAAAAAAAAADABAAAAAAAAAAAAADABEAAAAAAAAAAAADABIAAAAAAAAAAAADABMAAAAAAAAAAAADABQAAAAAAAAAAAADABUAAAAAAAAAAAADABYAAAAAAAAAAAADABcAAAAAAAAAAAADABgAAAAAAAAAAAADABkAAAAAAAAAAAADABoAAAAAAAAAAAADABsAAAAAAAAAAAADABwAAAAAAAAAAAADAB0AAAAAAAAAAAADAB4AAAAAAAAAAAAEAB4AAAAAAAAAAAAEAB0AAAAAAAAAAAAEABwAAAAAAAAAAAAEABsAAAAAAAAAAAAEABoAAAAAAAAAAAAEABkAAAAAAAAAAAAEABgAAAAAAAAAAAAEABcAAAAAAAAAAAAEABYAAAAAAAAAAAAEABUAAAAAAAAAAAAEABQAAAAAAAAAAAAEABMAAAAAAAAAAAAEABIAAAAAAAAAAAAEABEAAAAAAAAAAAAEABAAAAAAAAAAAAAEAA8AAAAAAAAAAAAFAA8AAAAAAAAAAAAFABAAAAAAAAAAAAAFABEAAAAAAAAAAAAFABIAAAAAAAAAAAAFABMAAAAAAAAAAAAFABQAAAAAAAAAAAAFABUAAAAAAAAAAAAFABYAAAAAAAAAAAAFABcAAAAAAAAAAAAFABgAAAAAAAAAAAAFABkAAAAAAAAAAAAFABoAAAAAAAAAAAAFABsAAAAAAAAAAAAFABwAAAAAAAAAAAAFAB0AAAAAAAAAAAAFAB4AAAAAAAAAAAAGAB4AAAAAAAAAAAAGAB0AAAAAAAAAAAAGABwAAAAAAAAAAAAGABsAAAAAAAAAAAAGABoAAAAAAAAAAAAGABkAAAAAAAAAAAAGABgAAAAAAAAAAAAHABgAAAAAAAAAAAAHABcAAAAAAAAAAAAHABYAAAAAAAAAAAAHABUAAAAAAAAAAAAHABQAAAAAAAAAAAAHABMAAAAAAAAAAAAHABIAAAAAAAAAAAAHABEAAAAAAAAAAAAHABAAAAAAAAAAAAAHAA8AAAAAAAAAAAAHAA4AAAAAAAAAAAAIAA4AAAAAAAAAAAAIAA8AAAAAAAAAAAAIABAAAAAAAAAAAAAIABEAAAAAAAAAAAAIABIAAAAAAAAAAAAIABMAAAAAAAAAAAAIABQAAAAAAAAAAAAIABUAAAAAAAAAAAAIABYAAAAAAAAAAAAIABcAAAAAAAAAAAAIABgAAAAAAAAAAAAIABkAAAAAAAAAAAAHABkAAAAAAAAAAAAHABoAAAAAAAAAAAAHABsAAAAAAAAAAAAHABwAAAAAAAAAAAAHAB0AAAAAAAAAAAAHAB4AAAAAAAAAAAAIAB4AAAAAAAAAAAAIAB0AAAAAAAAAAAAIABwAAAAAAAAAAAAIABsAAAAAAAAAAAAIABoAAAAAAAAAAAAJABoAAAAAAAAAAAAJABkAAAAAAAAAAAAJABgAAAAAAAAAAAAJABcAAAAAAAAAAAAJABYAAAAAAAAAAAAJABUAAAAAAAAAAAAJABQAAAAAAAAAAAAJABMAAAAAAAAAAAAJABIAAAAAAAAAAAAJABEAAAAAAAAAAAAJABAAAAAAAAAAAAAJAA8AAAAAAAAAAAAJAA4AAAAAAAAAAAAKAA4AAAAAAAAAAAAKAA8AAAAAAAAAAAAKABAAAAAAAAAAAAAKABEAAAAAAAAAAAAKABIAAAAAAAAAAAAKABMAAAAAAAAAAAAKABQAAAAAAAAAAAAKABUAAAAAAAAAAAAKABYAAAAAAAAAAAAKABcAAAAAAAAAAAAKABgAAAAAAAAAAAAKABkAAAAAAAAAAAAKABoAAAAAAAAAAAAKABsAAAAAAAAAAAAJABsAAAAAAAAAAAAJABwAAAAAAAAAAAAJAB0AAAAAAAAAAAAJAB4AAAAAAAAAAAAKAB4AAAAAAAAAAAAKAB0AAAAAAAAAAAAKABwAAAAAAAAAAAALABwAAAAAAAAAAAALABsAAAAAAAAAAAALABoAAAAAAAAAAAALABkAAAAAAAAAAAALABgAAAAAAAAAAAALABcAAAAAAAAAAAALABYAAAAAAAAAAAALABUAAAAAAAAAAAALABQAAAAAAAAAAAALABMAAAAAAAAAAAALABIAAAAAAAAAAAALABEAAAAAAAAAAAALABAAAAAAAAAAAAALAA8AAAAAAAAAAAALAA4AAAAAAAAAAAAMAA4AAAAAAAAAAAAMAA8AAAAAAAAAAAAMABAAAAAAAAAAAAAMABEAAAAAAAAAAAAMABIAAAAAAAAAAAAMABMAAAAAAAAAAAAMABQAAAAAAAAAAAAMABUAAAAAAAAAAAAMABYAAAAAAAAAAAAMABcAAAAAAAAAAAAMABgAAAAAAAAAAAAMABkAAAAAAAAAAAAMABoAAAAAAAAAAAAMABsAAAAAAAAAAAAMABwAAAAAAAAAAAAMAB0AAAAAAAAAAAALAB0AAAAAAAAAAAALAB4AAAAAAAAAAAAMAB4AAAAAAAAAAAANAB4AAAAAAAAAAAANAB0AAAAAAAAAAAANABwAAAAAAAAAAAANABsAAAAAAAAAAAANABoAAAAAAAAAAAANABkAAAAAAAAAAAANABgAAAAAAAAAAAANABcAAAAAAAAAAAANABYAAAAAAAAAAAANABUAAAAAAAAAAAANABQAAAAAAAAAAAANABMAAAAAAAMAAAANABIAAAAAAAIAAAANABEAAAAAAAEAAAANABAAAAAAAAAAAAANAA8AAAAAAAAAAAANAA4AAAAAAAAAAAAOAA4AAAAAAAAAAAAOAA0AAAAAAAAAAAAOAAwAAAAAAAAAAAAOAAsAAAAAAAAAAAAOAAoAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAEAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAAPAAsAAAAAAAAAAAAPAAwAAAAAAAAAAAAPAA0AAAAAAAAAAAAPAA4AAAAAAAAAAAAPAA8AAAAAAAAAAAAOAA8AAAAAAAAAAAAOABAAAAAAAAEAAAAOABEAAAADAAMAAAAOABIAAAABAAIAAAAOABMAAAAGAAMAAAAOABQAAAAAAAMAAAAOABUAAAAAAAAAAAAOABYAAAAAAAAAAAAOABcAAAAAAAAAAAAOABgAAAAAAAAAAAAOABkAAAAAAAAAAAAOABoAAAAAAAAAAAAOABsAAAAAAAAAAAAOABwAAAAAAAAAAAAOAB0AAAAAAAAAAAAOAB4AAAAAAAAAAAAPAB4AAAAAAAAAAAAPAB0AAAAAAAAAAAAPABwAAAAAAAAAAAAPABsAAAAAAAAAAAAPABoAAAAAAAAAAAAPABkAAAAAAAAAAAAPABgAAAAAAAAAAAAPABcAAAAAAAAAAAAPABYAAAAAAAAAAAAPABUAAAAAAAMAAAAPABQAAAAGAAMAAAAPABMAAAABAAIAAAAPABIAAAABAAIAAAAPABEAAAAEAAMAAAAPABAAAAACAAEAAAAQABAAAAAAAAAAAAAQAA8AAAAAAAAAAAAQAA4AAAAAAAAAAAAQAA0AAAAAAAAAAAAQAAwAAAAAAAAAAAAQAAsAAAAAAAAAAAAQAAoAAAAAAAAAAAAQAAkAAAAAAAAAAAAQAAgAAAAAAAAAAAAQAAcAAAAAAAAAAAAQAAYAAAAAAAAAAAAQAAUAAAAAAAAAAAAQAAQAAAAAAAAAAAAQAAMAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAEAAAAAAAAAAAARAAEAAAAAAAAAAAARAAIAAAAAAAAAAAARAAMAAAAAAAAAAAARAAQAAAAAAAAAAAARAAUAAAAAAAAAAAARAAYAAAAAAAAAAAARAAcAAAAAAAAAAAARAAgAAAAAAAAAAAARAAkAAAAAAAAAAAARAAoAAAAAAAAAAAARAAsAAAAAAAAAAAARAAwAAAAAAAAAAAARAA0AAAAAAAAAAAARAA4AAAAAAAAAAAARAA8AAAAAAAAAAAARABAAAAAAAAAAAAARABEAAAACAAEAAAAQABEAAAABAAEAAAAQABIAAAABAAIAAAAQABMAAAABAAIAAAAQABQAAAABAAIAAAAQABUAAAABAAMAAAAQABYAAAAAAAAAAAAQABcAAAAAAAAAAAAQABgAAAAAAAAAAAAQABkAAAAAAAAAAAAQABoAAAAAAAAAAAAQABsAAAAAAAAAAAAQABwAAAAAAAAAAAAQAB0AAAAAAAAAAAAQAB4AAAAAAAAAAAARAB4AAAAAAAAAAAARAB0AAAAAAAAAAAARABwAAAAAAAAAAAARABsAAAAAAAAAAAARABoAAAAAAAAAAAARABkAAAAAAAAAAAARABgAAAAAAAAAAAARABcAAAAAAAAAAAARABYAAAAAAAAAAAARABUAAAACAAMAAAARABQAAAAFAAMAAAARABMAAAABAAIAAAARABIAAAAEAAMAAAASABIAAAACAAEAAAASABEAAAAAAAAAAAASABAAAAAAAAAAAAASAA8AAAAAAAAAAAASAA4AAAAAAAAAAAASAA0AAAAAAAAAAAASAAwAAAAAAAAAAAASAAsAAAAAAAAAAAASAAoAAAAAAAAAAAASAAkAAAAAAAAAAAASAAgAAAAAAAAAAAASAAcAAAAAAAAAAAASAAYAAAAAAAAAAAASAAUAAAAAAAAAAAASAAQAAAAAAAAAAAASAAMAAAAAAAAAAAASAAIAAAAAAAAAAAASAAEAAAAAAAAAAAATAAEAAAAAAAAAAAATAAIAAAAAAAAAAAATAAMAAAAAAAAAAAATAAQAAAAAAAAAAAATAAUAAAAAAAAAAAATAAYAAAAAAAAAAAATAAcAAAAAAAAAAAATAAgAAAAAAAAAAAATAAkAAAAAAAAAAAATAAoAAAAAAAAAAAATAAsAAAAAAAAAAAATAAwAAAAAAAAAAAATAA0AAAAAAAAAAAATAA4AAAAAAAAAAAATAA8AAAAAAAAAAAATABAAAAAAAAAAAAATABEAAAAAAAAAAAATABIAAAAAAAAAAAATABMAAAAAAAAAAAASABMAAAACAAIAAAASABQAAAACAAMAAAASABUAAAAAAAAAAAASABYAAAAAAAAAAAASABcAAAAAAAAAAAASABgAAAAAAAAAAAASABkAAAAAAAAAAAASABoAAAAAAAAAAAASABsAAAAAAAAAAAASABwAAAAAAAAAAAASAB0AAAAAAAAAAAASAB4AAAAAAAAAAAATAB4AAAAAAAAAAAATAB0AAAAAAAAAAAATABwAAAAAAAAAAAATABsAAAAAAAAAAAATABoAAAAAAAAAAAATABkAAAAAAAAAAAATABgAAAAAAAAAAAATABcAAAAAAAAAAAATABYAAAAAAAAAAAATABUAAAAAAAAAAAATABQAAAAAAAAAAAAUABQAAAAAAAAAAAAUABMAAAAAAAAAAAAUABIAAAAAAAAAAAAUABEAAAAAAAAAAAAUABAAAAAAAAAAAAAUAA8AAAAAAAAAAAAUAA4AAAAAAAAAAAAUAA0AAAAAAAAAAAAUAAwAAAAAAAAAAAAUAAsAAAAAAAAAAAAUAAoAAAAAAAAAAAAUAAkAAAAAAAAAAAAUAAgAAAAAAAAAAAAUAAcAAAAAAAAAAAAUAAYAAAAAAAAAAAAUAAUAAAAAAAAAAAAUAAQAAAAAAAAAAAAUAAMAAAAAAAAAAAAUAAIAAAAAAAAAAAAUAAEAAAAAAAAAAAAVAAEAAAAAAAAAAAAVAAIAAAAAAAAAAAAVAAMAAAAAAAAAAAAVAAQAAAAAAAAAAAAVAAUAAAAAAAAAAAAVAAYAAAAAAAAAAAAVAAcAAAAAAAAAAAAVAAgAAAAAAAAAAAAVAAkAAAAAAAAAAAAVAAoAAAAAAAAAAAAVAAsAAAAAAAAAAAAVAAwAAAAAAAAAAAAVAA0AAAAAAAAAAAAVAA4AAAAAAAAAAAAVAA8AAAAAAAAAAAAVABAAAAAAAAAAAAAVABEAAAAAAAAAAAAVABIAAAAAAAAAAAAVABMAAAAAAAAAAAAVABQAAAAAAAAAAAAVABUAAAAAAAAAAAAUABUAAAAAAAAAAAAUABYAAAAAAAAAAAAUABcAAAAAAAAAAAAUABgAAAAAAAAAAAAUABkAAAAAAAAAAAAUABoAAAAAAAAAAAAUABsAAAAAAAAAAAAUABwAAAAAAAAAAAAUAB0AAAAAAAAAAAAUAB4AAAAAAAAAAAAVAB4AAAAAAAAAAAAVAB0AAAAAAAAAAAAVABwAAAAAAAAAAAAVABsAAAAAAAAAAAAVABoAAAAAAAMAAAAVABkAAAAAAAEAAAAVABgAAAAAAAAAAAAVABcAAAAAAAAAAAAVABYAAAAAAAAAAAAWABYAAAAAAAAAAAAWABUAAAAAAAAAAAAWABQAAAAAAAAAAAAWABMAAAAAAAAAAAAWABIAAAAAAAAAAAAWABEAAAAAAAAAAAAWABAAAAAAAAAAAAAWAA8AAAAAAAAAAAAWAA4AAAAAAAAAAAAWAA0AAAAAAAAAAAAWAAwAAAAAAAAAAAAWAAsAAAAAAAAAAAAWAAoAAAAAAAAAAAAWAAkAAAAAAAAAAAAWAAgAAAAAAAAAAAAWAAcAAAAAAAAAAAAWAAYAAAAAAAAAAAAWAAUAAAAAAAAAAAAWAAQAAAAAAAAAAAAWAAMAAAAAAAAAAAAWAAIAAAAAAAAAAAAWAAEAAAAAAAAAAAAXAAEAAAAAAAAAAAAXAAIAAAAAAAAAAAAXAAMAAAAAAAAAAAAXAAQAAAAAAAAAAAAXAAUAAAAAAAAAAAAXAAYAAAAAAAAAAAAXAAcAAAAAAAAAAAAXAAgAAAAAAAAAAAAXAAkAAAAAAAAAAAAXAAoAAAAAAAAAAAAXAAsAAAAAAAAAAAAXAAwAAAAAAAAAAAAXAA0AAAAAAAAAAAAXAA4AAAAAAAAAAAAXAA8AAAAAAAAAAAAXABAAAAAAAAAAAAAXABEAAAAAAAAAAAAXABIAAAAAAAAAAAAXABMAAAAAAAAAAAAXABQAAAAAAAAAAAAXABUAAAAAAAAAAAAXABYAAAAAAAAAAAAXABcAAAAAAAAAAAAWABcAAAAAAAAAAAAWABgAAAAAAAAAAAAWABkAAAABAAEAAAAWABoAAAABAAMAAAAWABsAAAAAAAAAAAAWABwAAAAAAAAAAAAWAB0AAAAAAAAAAAAWAB4AAAAAAAAAAAAXAB4AAAAAAAAAAAAXAB0AAAAAAAAAAAAXABwAAAAAAAMAAAAXABsAAAAAAAIAAAAXABoAAAAGAAMAAAAXABkAAAABAAEAAAAXABgAAAAAAAAAAAAYABgAAAAAAAAAAAAYABcAAAAAAAAAAAAYABYAAAAAAAAAAAAYABUAAAAAAAAAAAAYABQAAAAAAAAAAAAYABMAAAAAAAAAAAAYABIAAAAAAAAAAAAYABEAAAAAAAAAAAAYABAAAAAAAAAAAAAYAA8AAAAAAAAAAAAYAA4AAAAAAAAAAAAYAA0AAAAAAAAAAAAYAAwAAAAAAAAAAAAYAAsAAAAAAAAAAAAYAAoAAAAAAAAAAAAYAAkAAAAAAAAAAAAYAAgAAAAAAAAAAAAYAAcAAAAAAAAAAAAYAAYAAAAAAAAAAAAYAAUAAAAAAAAAAAAYAAQAAAAAAAAAAAAYAAMAAAAAAAAAAAAYAAIAAAAAAAAAAAAYAAEAAAAAAAAAAAAZAAEAAAAAAAAAAAAZAAIAAAAAAAAAAAAZAAMAAAAAAAAAAAAZAAQAAAAAAAAAAAAZAAUAAAAAAAAAAAAZAAYAAAAAAAAAAAAZAAcAAAAAAAAAAAAZAAgAAAAAAAAAAAAZAAkAAAAAAAAAAAAZAAoAAAAAAAAAAAAZAAsAAAAAAAAAAAAZAAwAAAAAAAAAAAAZAA0AAAAAAAAAAAAZAA4AAAAAAAAAAAAZAA8AAAAAAAAAAAAZABAAAAAAAAAAAAAZABEAAAAAAAAAAAAZABIAAAAAAAAAAAAZABMAAAAAAAAAAAAZABQAAAAAAAAAAAAZABUAAAAAAAAAAAAZABYAAAAAAAEAAAAZABcAAAAAAAIAAAAZABgAAAAAAAIAAAAZABkAAAADAAMAAAAYABkAAAABAAEAAAAYABoAAAABAAIAAAAYABsAAAABAAIAAAAYABwAAAAGAAMAAAAYAB0AAAAAAAMAAAAYAB4AAAAAAAAAAAAZAB4AAAAAAAAAAAAZAB0AAAACAAMAAAAZABwAAAACAAIAAAAZABsAAAACAAIAAAAZABoAAAAFAAMAAAAaABoAAAACAAMAAAAaABkAAAACAAIAAAAaABgAAAACAAIAAAAaABcAAAACAAIAAAAaABYAAAACAAEAAAAaABUAAAAAAAAAAAAaABQAAAAAAAAAAAAaABMAAAAAAAAAAAAaABIAAAAAAAAAAAAaABEAAAAAAAAAAAAaABAAAAAAAAAAAAAaAA8AAAAAAAAAAAAaAA4AAAAAAAAAAAAaAA0AAAAAAAAAAAAaAAwAAAAAAAAAAAAaAAsAAAAAAAAAAAAaAAoAAAAAAAAAAAAaAAkAAAAAAAAAAAAaAAgAAAAAAAAAAAAaAAcAAAAAAAAAAAAaAAYAAAAAAAAAAAAaAAUAAAAAAAAAAAAaAAQAAAAAAAAAAAAaAAMAAAAAAAAAAAAaAAIAAAAAAAAAAAAaAAEAAAAAAAAAAAAbAAEAAAAAAAAAAAAbAAIAAAAAAAAAAAAbAAMAAAAAAAAAAAAbAAQAAAAAAAAAAAAbAAUAAAAAAAAAAAAbAAYAAAAAAAAAAAAbAAcAAAAAAAAAAAAbAAgAAAAAAAAAAAAbAAkAAAAAAAAAAAAbAAoAAAAAAAAAAAAbAAsAAAAAAAAAAAAbAAwAAAAAAAAAAAAbAA0AAAAAAAAAAAAbAA4AAAAAAAAAAAAbAA8AAAAAAAAAAAAbABAAAAAAAAAAAAAbABEAAAAAAAAAAAAbABIAAAAAAAAAAAAbABMAAAAAAAAAAAAbABQAAAAAAAAAAAAbABUAAAAAAAAAAAAbABYAAAAAAAAAAAAbABcAAAAAAAAAAAAbABgAAAAAAAAAAAAbABkAAAAAAAAAAAAbABoAAAAAAAAAAAAbABsAAAAAAAAAAAAaABsAAAAAAAAAAAAaABwAAAAAAAAAAAAaAB0AAAAAAAAAAAAaAB4AAAAAAAAAAAAbAB4AAAAAAAAAAAAbAB0AAAAAAAAAAAAbABwAAAAAAAAAAAAcABwAAAAAAAAAAAAcABsAAAAAAAAAAAAcABoAAAAAAAAAAAAcABkAAAAAAAAAAAAcABgAAAAAAAAAAAAcABcAAAAAAAAAAAAcABYAAAAAAAAAAAAcABUAAAAAAAAAAAAcABQAAAAAAAAAAAAcABMAAAAAAAAAAAAcABIAAAAAAAAAAAAcABEAAAAAAAAAAAAcABAAAAAAAAAAAAAcAA8AAAAAAAAAAAAcAA4AAAAAAAAAAAAcAA0AAAAAAAAAAAAcAAwAAAAAAAAAAAAcAAsAAAAAAAAAAAAcAAoAAAAAAAAAAAAcAAkAAAAAAAAAAAAcAAgAAAAAAAAAAAAcAAcAAAAAAAAAAAAcAAYAAAAAAAAAAAAcAAUAAAAAAAAAAAAcAAQAAAAAAAAAAAAcAAMAAAAAAAAAAAAcAAIAAAAAAAAAAAAcAAEAAAAAAAAAAAAdAAEAAAAAAAAAAAAdAAIAAAAAAAAAAAAdAAMAAAAAAAAAAAAdAAQAAAAAAAAAAAAdAAUAAAAAAAAAAAAdAAYAAAAAAAAAAAAdAAcAAAAAAAAAAAAdAAgAAAAAAAAAAAAdAAkAAAAAAAAAAAAdAAoAAAAAAAAAAAAdAAsAAAAAAAAAAAAdAAwAAAAAAAAAAAAdAA0AAAAAAAAAAAAdAA4AAAAAAAAAAAAdAA8AAAAAAAAAAAAdABAAAAAAAAAAAAAdABEAAAAAAAAAAAAdABIAAAAAAAAAAAAdABMAAAAAAAAAAAAdABQAAAAAAAAAAAAdABUAAAAAAAAAAAAdABYAAAAAAAAAAAAdABcAAAAAAAAAAAAdABgAAAAAAAAAAAAdABkAAAAAAAAAAAAdABoAAAAAAAAAAAAdABsAAAAAAAAAAAAdABwAAAAAAAAAAAAdAB0AAAAAAAAAAAAcAB0AAAAAAAAAAAAcAB4AAAAAAAAAAAAdAB4AAAAAAAAAAAAeAB4AAAAAAAAAAAAeAB0AAAAAAAAAAAAeABwAAAAAAAAAAAAeABsAAAAAAAAAAAAeABoAAAAAAAAAAAAeABkAAAAAAAAAAAAeABgAAAAAAAAAAAAeABcAAAAAAAAAAAAeABYAAAAAAAAAAAAeABUAAAAAAAAAAAAeABQAAAAAAAAAAAAeABMAAAAAAAAAAAAeABIAAAAAAAAAAAAeABEAAAAAAAAAAAAeABAAAAAAAAAAAAAeAA8AAAAAAAAAAAAeAA4AAAAAAAAAAAAeAA0AAAAAAAAAAAAeAAwAAAAAAAAAAAAeAAsAAAAAAAAAAAAeAAoAAAAAAAAAAAAeAAkAAAAAAAAAAAAeAAgAAAAAAAAAAAAeAAcAAAAAAAAAAAAeAAYAAAAAAAAAAAAeAAUAAAAAAAAAAAAeAAQAAAAAAAAAAAAeAAMAAAAAAAAAAAAeAAIAAAAAAAAAAAAeAAEAAAAAAAAAAAA=")
tile_set = ExtResource("5_q6r6c")

[node name="CollisionLayer" type="TileMapLayer" parent="CanvasLayer/FireViewportContainer/FireViewport/World"]
texture_filter = 1
tile_map_data = PackedByteArray("AAADAAsAAAAEAAEAAAAJAAwAAAAEAAEAAAAKAAkAAAAEAAEAAAAFAAoAAAAEAAEAAAAJAAYAAAAEAAEAAAAKAAMAAAAEAAEAAAANAAgAAAAEAAEAAAANAAwAAAAEAAEAAAALAA0AAAAEAAEAAAAHAA0AAAADAAEAAAAHAAgAAAADAAEAAAANAAQAAAADAAEAAAAEABgAAAAEAAEAAAAIABUAAAAEAAEAAAAJABoAAAAEAAEAAAABABsAAAAEAAEAAAACABUAAAAEAAEAAAAGABoAAAAEAAEAAAAMABgAAAAEAAEAAAALABIAAAAEAAEAAAAFABEAAAAEAAEAAAABABAAAAAEAAEAAAAAABMAAAAEAAEAAAAIABAAAAAEAAEAAAAVABIAAAAEAAEAAAAaAAkAAAAEAAEAAAAQABsAAAAEAAEAAAAVABcAAAAEAAEAAAAbABMAAAAEAAEAAAAVAA4AAAAEAAEAAAAdABwAAAAEAAEAAAAdAB8AAAAEAAEAAAAUAB4AAAAEAAEAAAASAAkAAAAEAAEAAAAWAAQAAAAEAAEAAAAcAAYAAAAEAAEAAAAdAAsAAAAEAAEAAAARAAQAAAAEAAEAAAATAAEAAAAEAAEAAAAPAAoAAAAEAAEAAAAGAB4AAAAEAAEAAAACAB4AAAADAAEAAAAPABcAAAADAAEAAAAYAB4AAAADAAEAAAAYAA8AAAADAAEAAAAaAAIAAAADAAEAAAA=")
tile_set = ExtResource("5_q6r6c")

[node name="ForegroundLayer" type="TileMapLayer" parent="CanvasLayer/FireViewportContainer/FireViewport/World"]
z_index = 4096
y_sort_enabled = true
texture_filter = 1
tile_map_data = PackedByteArray("AAADAAoAAAAEAAAAAAAFAAkAAAAEAAAAAAAJAAsAAAAEAAAAAAALAAwAAAAEAAAAAAANAAsAAAAEAAAAAAAKAAgAAAAEAAAAAAANAAcAAAAEAAAAAAAJAAUAAAAEAAAAAAAKAAIAAAAEAAAAAAAHAAwAAAADAAAAAAAHAAcAAAADAAAAAAANAAMAAAADAAAAAAABABoAAAAEAAAAAAAEABcAAAAEAAAAAAAGABkAAAAEAAAAAAAJABkAAAAEAAAAAAAMABcAAAAEAAAAAAAIABQAAAAEAAAAAAACABQAAAAEAAAAAAAAABIAAAAEAAAAAAABAA8AAAAEAAAAAAAFABAAAAAEAAAAAAAIAA8AAAAEAAAAAAALABEAAAAEAAAAAAAQABoAAAAEAAAAAAAUAB0AAAAEAAAAAAAdAB4AAAAEAAAAAAAdABsAAAAEAAAAAAAVABYAAAAEAAAAAAAbABIAAAAEAAAAAAAVABEAAAAEAAAAAAAVAA0AAAAEAAAAAAAaAAgAAAAEAAAAAAACAB0AAAADAAAAAAAPABYAAAADAAAAAAAYAB0AAAADAAAAAAAaAAEAAAADAAAAAAAYAA4AAAADAAAAAAAGAB0AAAAEAAAAAAAdAAoAAAAEAAAAAAAcAAUAAAAEAAAAAAASAAgAAAAEAAAAAAARAAMAAAAEAAAAAAAPAAkAAAAEAAAAAAATAAAAAAAEAAAAAAAWAAMAAAAEAAAAAAA=")
tile_set = ExtResource("5_q6r6c")

[node name="InteractiblesCollision" type="TileMapLayer" parent="CanvasLayer/FireViewportContainer/FireViewport/World"]
texture_filter = 1
tile_set = ExtResource("7_d21ai")

[node name="InteractiblesPreset" type="TileMapLayer" parent="CanvasLayer/FireViewportContainer/FireViewport/World"]
texture_filter = 1
tile_map_data = PackedByteArray("AAABAAsAAAAAAAAAAAAFAAsAAAACAAAAAAAIAA0AAAACAAAAAAAIAAkAAAACAAAAAAAKAAYAAAACAAAAAAANAA0AAAACAAAAAAANAAYAAAACAAAAAAADAAwAAAAAAAAAAAAGAA0AAAAAAAAAAAAHAAoAAAAAAAAAAAAKAAcAAAAAAAAAAAABAA0AAAACAAAAAAAJAAAAAAACAAAAAAALAAQAAAACAAAAAAAJAAMAAAACAAAAAAANAAEAAAACAAAAAAABAAMAAAABAAAAAAAFAAAAAAABAAAAAAAHAAQAAAABAAAAAAAEAAgAAAABAAAAAAABAAcAAAABAAAAAAAAAAEAAAABAAAAAAAAAAYAAAAAAAAAAAADAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAHAAYAAAAAAAAAAAANABQAAAAAAAAAAAADABsAAAAAAAAAAAAJABwAAAAAAAAAAAAKAB8AAAAAAAAAAAAOABMAAAABAAAAAAAQABQAAAABAAAAAAAPABEAAAABAAAAAAASABMAAAABAAAAAAAXABsAAAABAAAAAAAVABkAAAABAAAAAAAaABgAAAABAAAAAAAZABwAAAABAAAAAAAZABYAAAABAAAAAAAYABoAAAAAAAAAAAAWABkAAAAAAAAAAAAXABoAAAAAAAAAAAAYABwAAAAAAAAAAAAaABkAAAAAAAAAAAAZABcAAAAAAAAAAAAPABMAAAAAAAAAAAAQABEAAAAAAAAAAAAPABIAAAAAAAAAAAARABQAAAAAAAAAAAARABgAAAAAAAAAAAAMABwAAAAAAAAAAAAMAB0AAAAAAAAAAAAQAB8AAAAAAAAAAAAOABsAAAAAAAAAAAAYABIAAAAAAAAAAAASAAwAAAAAAAAAAAAYAAgAAAAAAAAAAAATAAYAAAAAAAAAAAAVAAoAAAAAAAAAAAAdAA4AAAAAAAAAAAAeAAQAAAAAAAAAAAAcAAEAAAAAAAAAAAAXAAEAAAAAAAAAAAAQAAEAAAAAAAAAAAAHABcAAAACAAAAAAAHAB4AAAACAAAAAAADAB8AAAACAAAAAAAAAB4AAAACAAAAAAAAABkAAAACAAAAAAAFABsAAAACAAAAAAAKAB0AAAACAAAAAAALABoAAAACAAAAAAAKABYAAAACAAAAAAAOAA8AAAACAAAAAAAKAA8AAAACAAAAAAAXAAwAAAACAAAAAAAVAAcAAAACAAAAAAAYAAQAAAACAAAAAAAdAAgAAAACAAAAAAAeAAEAAAACAAAAAAAdABUAAAACAAAAAAAfABsAAAACAAAAAAAeAB8AAAACAAAAAAAaAB4AAAACAAAAAAAVAB8AAAACAAAAAAASAB4AAAACAAAAAAAUABsAAAACAAAAAAAPABwAAAACAAAAAAATABUAAAACAAAAAAAUABgAAAACAAAAAAAXABYAAAACAAAAAAASABAAAAACAAAAAAAQAAwAAAACAAAAAAAQAAUAAAACAAAAAAAbABAAAAACAAAAAAAdABkAAAAAAAAAAAAfABEAAAAAAAAAAAAcABYAAAAAAAAAAAAZAAwAAAAAAAAAAAAaAAUAAAAAAAAAAAA=")
tile_set = ExtResource("7_d21ai")

[node name="InteractiblesForeground" type="TileMapLayer" parent="CanvasLayer/FireViewportContainer/FireViewport/World"]
texture_filter = 1

[node name="WaterViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
offset_left = 576.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="WaterViewport" type="SubViewport" parent="CanvasLayer/WaterViewportContainer"]
disable_3d = true
handle_input_locally = false
size = Vector2i(576, 648)
render_target_update_mode = 4

[node name="WaterCamera" type="Camera2D" parent="CanvasLayer/WaterViewportContainer/WaterViewport"]
zoom = Vector2(5, 5)
limit_left = 0
limit_top = 0
limit_right = 512
limit_bottom = 512
